--- a/.config/sway/config
+++ b/.config/sway/config
@@ -72,6 +72,12 @@ output DP-2 mode 3440x1440@60hz position 0,0
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
+input "type:touchpad" {
+    dwt enabled
+    tap enabled
+    natural_scroll enabled
+    middle_emulation enabled
+}
 input "type:pointer" accel_profile flat
 input * {
     xkb_layout us
@@ -182,6 +188,8 @@ input * {
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
+
+    bindsym $mod+Shift+s exec grim -g "$(slurp)" ~/Downloads/screenshot-`date +%F-%T`.png
 #
 # Resizing containers:
 #
