--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -3,7 +3,11 @@ import = ["~/.config/alacritty/theme.toml"]
 [window]
 opacity = 0.95
 [font]
-size=12.0
+normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
+bold = { family = "JetBrainsMono Nerd Font", style = "Bold" }
+italic = { family = "JetBrainsMono Nerd Font", style = "Italic" }
+bold_italic = { family = "JetBrainsMono Nerd Font", style = "Bold Italic" }
+size=14.0
 [keyboard]
 bindings = [
   { key = "Right", mods = "Alt", chars = "\u001BF" },
