--- a/.config/sway/config
+++ b/.config/sway/config
@@ -29,16 +29,16 @@ include /etc/sway/config-vars.d/*
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /home/lukasmetzner/Pictures/pixelart/1168050.png fill
+output * bg /home/lukasmetzner/Pictures/anime/luffy-ocean.jpg fill
 
 # Home Office
-output eDP-1 mode 1920x1200@60hz position 3840,0
-output DP-9 mode 3440x1440@60hz position 0,-1440
-output DP-8 mode 3840x2160@60hz position 0,0
+output eDP-1 mode 1920x1200@60hz position 3840,1440
+output DP-9 mode 3440x1440@60hz position 0,0
+output DP-8 mode 3840x2160@60hz position 0,1440
 
 # Office
-#output eDP-1 mode 1920x1200@60hz position 0,0
-#output DP-2 mode 3440x1440@60hz position -3440,0
+#output eDP-1 mode 1920x1200@60hz position 3440,0
+#output DP-2 mode 3440x1440@60hz position 0,0
 
 #
 # Example configuration:
