feat: show time and date

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -82,8 +82,9 @@
         "spacing": 10
     },
     "clock": {
-        // "timezone": "America/New_York",
+        "timezone": "Europe/Berlin",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "format": "{:%Y-%m-%d %H:%M}",
         "format-alt": "{:%Y-%m-%d}"
     },
     "cpu": {
