--- a/.config/sway/config
+++ b/.config/sway/config
@@ -32,13 +32,13 @@ include /etc/sway/config-vars.d/*
 output * bg /home/lukasmetzner/Pictures/sky.jpg fill
 
 # Home Office
-#output eDP-1 mode 1920x1200@60hz position 7680,0
-#output DP-9 mode 3840x2160@60hz position 3840,0
-#output HDMI-A-1 mode 3840x2160@60hz position 0,0
+output eDP-1 mode 1920x1200@60hz position 7680,0
+output DP-9 mode 3840x2160@60hz position 3840,0
+output HDMI-A-1 mode 3840x2160@60hz position 0,0
 
 # Office
-output eDP-1 mode 1920x1200@60hz position 3440,0
-output DP-2 mode 3440x1440@60hz position 0,0
+#output eDP-1 mode 1920x1200@60hz position 3440,0
+#output DP-2 mode 3440x1440@60hz position 0,0
 
 #
 # Example configuration:
