--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 set -g default-terminal "xterm-256color"
-set-option -g prefix C-b
+set-option -g prefix C-h
 
 set -g status-position bottom
 set -g status-bg colour234
